--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -16,7 +16,7 @@
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/swagger": "^7.1.0",
     "typeorm": "^0.3.17",
-    "sqlite3": "^5.1.6",
+    "pg": "^8.11.3",
     "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
     "uuid": "^9.0.0",
@@ -27,6 +27,7 @@
     "@nestjs/cli": "^10.0.0",
     "@types/node": "^20.3.1",
     "@types/uuid": "^9.0.2",
+    "@types/pg": "^8.10.2",
     "typescript": "^5.1.3"
   }
 } 
