--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -206,7 +206,7 @@ services:
   frontend:
     build: ./frontend
     ports:
-      - "3001:3001"
+      - "3001:80"
     environment:
       - REACT_APP_API_URL=http://localhost:8080
       - REACT_APP_WS_URL=ws://localhost:8080
@@ -218,15 +218,15 @@ services:
       - REACT_APP_FIREBASE_STORAGE_BUCKET=${FIREBASE_STORAGE_BUCKET}
       - REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${FIREBASE_MESSAGING_SENDER_ID}
       - REACT_APP_FIREBASE_APP_ID=${FIREBASE_APP_ID}
-    depends_on:
-      authenticate-service:
-        condition: service_healthy
-      todotask-service:
-        condition: service_healthy
-      notification-service:
-        condition: service_healthy
-      image-service:
-        condition: service_healthy
+    # depends_on:
+    #   authenticate-service:
+    #     condition: service_healthy
+    #   todotask-service:
+    #     condition: service_healthy
+    #   notification-service:
+    #     condition: service_healthy
+    #   image-service:
+    #     condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:80"]
       interval: 30s
