--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -28,7 +28,7 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location /api/todo {
+    location /api/todos {
         proxy_pass http://todotask-service:8082;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
