--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,6 +123,7 @@ services:
       - SPRING_DATASOURCE_PASSWORD=mypass
       - SPRING_DATA_REDIS_HOST=redis
       - SERVER_PORT=8082
+      - SPRING_CACHE_TYPE=NONE
     depends_on:
       postgres_todo:
         condition: service_healthy
