--- a/authenticate-service-new/.dockerignore
+++ b/authenticate-service-new/.dockerignore
@@ -4,8 +4,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Production build (will be built inside container)
+# Build outputs
+dist
 build
+*.tsbuildinfo
 
 # Environment files
 .env
@@ -14,7 +16,7 @@ build
 .env.test.local
 .env.production.local
 
-# IDE and editor files
+# IDE files
 .vscode
 .idea
 *.swp
@@ -24,13 +26,12 @@ build
 # OS files
 .DS_Store
 Thumbs.db
-ehthumbs.db
 
 # Git
 .git
 .gitignore
 
-# Docker files
+# Docker
 Dockerfile*
 docker-compose*
 .dockerignore
@@ -39,8 +40,6 @@ docker-compose*
 coverage
 .nyc_output
 *.lcov
-/cypress/videos
-/cypress/screenshots
 
 # Logs
 logs
@@ -52,8 +51,15 @@ pids
 *.seed
 *.pid.lock
 
-# ESLint cache
-.eslintcache
+# Coverage directory used by tools like istanbul
+coverage
+
+# Compiled binary addons
+*.tar
+build/Release
+
+# Dependency directories
+jspm_packages/
 
 # Optional npm cache directory
 .npm
@@ -61,30 +67,13 @@ pids
 # Optional eslint cache
 .eslintcache
 
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
 # Output of 'npm pack'
 *.tgz
 
 # Yarn Integrity file
 .yarn-integrity
 
-# Storybook
-.storybook
-storybook-static
-
 # README and docs
 README.md
 CHANGELOG.md
-LICENSE
-
-# Service worker
-public/sw.js
-public/workbox-*.js
+LICENSE 
