--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,7 +100,7 @@ services:
       - DATASOURCE_DATABASE=authenticate_db
       - JWT_SECRET=jsdhfsbjdkf273hdgckasjgf823fjdbsc
     depends_on:
-      postgres-authenticate:
+      postgres_authenticate:
         condition: service_healthy
     networks:
       - microservices-network
