--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -52,7 +52,7 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location /api/notification {
+    location /api/notifications {
         proxy_pass http://notification-service:8083;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
