--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,7 +10,7 @@ server {
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
-    add_header Content-Security-Policy "default-src 'self'; connect-src 'self' http://localhost:3001 http://authenticate-service:8081; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;";
+     add_header Content-Security-Policy "default-src 'self'; connect-src 'self' http://localhost:3001 http://authenticate-service:8081; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:;";
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # Frontend
@@ -61,13 +61,18 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location /api/image {
+    location /api/images {
         proxy_pass http://image-service:8084;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+
+        client_max_body_size 10M;
     }
 
     # Error pages
