fix auth deploy

--- a/k8s/deployments/image-service.yaml
+++ b/k8s/deployments/image-service.yaml
@@ -19,20 +19,11 @@ spec:
         - containerPort: 8084
         env:
         - name: PORT
-          valueFrom:
-            configMapKeyRef:
-              name: app-config
-              key: PORT_IMAGE
+          value: "8084"
         - name: NODE_ENV
-          valueFrom:
-            configMapKeyRef:
-              name: app-config
-              key: NODE_ENV
+          value: "production"
         - name: REDIS_URL
-          valueFrom:
-            configMapKeyRef:
-              name: app-config
-              key: REDIS_URL
+          value: "redis://redis-service:6379"
         - name: JWT_SECRET
           valueFrom:
             secretKeyRef:
@@ -68,55 +59,29 @@ spec:
             secretKeyRef:
               name: app-secrets
               key: FIREBASE_CLIENT_EMAIL
-        - name: FIREBASE_DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              name: app-secrets
-              key: FIREBASE_DATABASE_URL
         - name: ALLOWED_ORIGINS
           valueFrom:
             configMapKeyRef:
-              name: app-config
+              name: cors-config
               key: ALLOWED_ORIGINS
-        - name: AUTH_SERVICE_URL
+        - name: CORS_METHODS
           valueFrom:
             configMapKeyRef:
-              name: app-config
-              key: AUTH_SERVICE_URL
-        - name: TODO_SERVICE_URL
+              name: cors-config
+              key: CORS_METHODS
+        - name: CORS_HEADERS
           valueFrom:
             configMapKeyRef:
-              name: app-config
-              key: TODO_SERVICE_URL
-        - name: NOTIFICATION_SERVICE_URL
+              name: cors-config
+              key: CORS_HEADERS
+        - name: CORS_CREDENTIALS
           valueFrom:
             configMapKeyRef:
-              name: app-config
-              key: NOTIFICATION_SERVICE_URL
+              name: cors-config
+              key: CORS_CREDENTIALS
         volumeMounts:
         - name: image-uploads
           mountPath: /app/uploads
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 8084
-          initialDelaySeconds: 15
-          periodSeconds: 10
-          timeoutSeconds: 5
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 8084
-          initialDelaySeconds: 30
-          periodSeconds: 20
-          timeoutSeconds: 5
-        resources:
-          requests:
-            memory: "256Mi"
-            cpu: "100m"
-          limits:
-            memory: "512Mi"
-            cpu: "300m"
       volumes:
       - name: image-uploads
         persistentVolumeClaim:
